CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7 FATAL_ERROR)
PROJECT(imagecapture)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/modules/")

FIND_PACKAGE(LibUSB REQUIRED)

INCLUDE_DIRECTORIES(include ${LibUSB_INCLUDE_DIRS})

ADD_EXECUTABLE(imagecapture
    src/main.c
    src/chameleon.c
    src/chameleon_util.c)

TARGET_LINK_LIBRARIES(imagecapture
    ${LibUSB_LIBRARY})

INSTALL(TARGETS imagecapture DESTINATION bin)
